--- a/WebSocketClient.html
+++ b/WebSocketClient.html
@@ -26,6 +26,7 @@
 
         function send() {
             var msg = document.getElementById('message').value;
+            msg = JSON.stringify({to: "client2", msg: msg})
             sock.send(msg);
         };
     </script>
